--- a/index.html
+++ b/index.html
@@ -118,21 +118,10 @@
                         <li><span aria-hidden="true">🧡</span> Experiencias reales</li>
                         <li><span aria-hidden="true">🧡</span> Estrategias prácticas</li>
                     </ul>
-                    <a href="./assets/documents/Efecto Naranja Ebook.pdf" class="btn btn-download"
-                        download="Ebook-Efecto-Naranja-TDAH-Adultos.pdf" onclick="
-     gtag('event', 'descarga_ebook', {
-       event_category: 'Descargas',
-       event_label: 'Ebook Efecto Naranja',
-       value: 1,
-       event_callback: function() {
-         window.location.href = './assets/documents/Efecto Naranja Ebook.pdf';
-       }
-     });
-     setTimeout(function() {
-       window.location.href = './assets/documents/Efecto Naranja Ebook.pdf';
-     }, 1000);
-     return false;
-   ">
+                    <a href="./assets/documents/Efecto Naranja Ebook.pdf" class="btn btn-download" id="download-ebook"
+                        download="Ebook-Efecto-Naranja-TDAH-Adultos.pdf">
+                        <i class="fas fa-download" aria-hidden="true"></i> Descargar eBook gratuito
+                    </a>
                 </div>
             </div>
         </div>
