--- a/index.html
+++ b/index.html
@@ -191,7 +191,15 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({
+                publicKey: "sZaV0dP15gACQdARJ",
+            });
+        })();
+    </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8X3SLYC1L"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
